# tc2025

./: .gitignore  LICENSE  README.md
ros1_src/: CMakeLists.txt  package.xml  readme.md
ros1_src/config/: config_localization.yaml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  costmap_local_2.yaml  mcl_3dl.rviz  move_base.yaml  planner_global.yaml  planner_local.yaml  tc2024_mid.yaml  tc2024_mid_local.yaml  tc2024_vel.yaml  zed_f9p.yaml
ros1_src/config/rviz/: mapping.rviz  navigation.rviz
ros1_src/gui/: index.html  script.js  styles.css
ros1_src/launch/: 1_init_robot_tc2024.launch  1_init_robot_tc2024_joystick.launch  2-1_mapping_fastlio.launch  2-2_pcd_cleaning.launch  2-3_pcd_to_2dmap.launch  3-1_locarization_fastlio.launch  3-1_locarization_fastlio_1st.launch  3-1_locarization_fastlio_next.launch  3-2_locarization.launch  4_run.launch  4_run_1st.launch  4_run_2025.launch  4_run_next.launch  gps.launch  gps_viewer.launch
ros1_src/scripts/: .env.sample  3dpoint_to_2dmap.py  amcl_pos_reader_lio.py  array_plotter.py  base_link_zero_broadcaster.py  best.pt  change_map_gui.py  clear_localmap.py  conditional_tf_publisher.py  del_point.py  flag_maker.py  gps_trajectory_viewer.py  gpt_frontcam_detector.py  gpt_test.py  http_server.py  joystick_teleop.py  mapping_launch.py  marge_lidar_data.py  navigator.py  navigator_logplotter.py  save_image.py  tc2023_signal_detector.py  total_gui.py  total_gui_inagi.py  waypoint_gui.py  waypoint_manager.py  waypoint_map_view.py
ros1_src/scripts/gps/: __init__.py  gps_trajectory_viewer.py
ros1_src/scripts/old/: waypoint_manager copy.py
ros2_src/: CMakeLists.txt  README.md  package.xml
ros2_src/laser_scan_simulator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_src/laser_scan_simulator/laser_scan_simulator/: laser_scan_simulator.py
ros2_src/laser_scan_simulator/launch/: laser_scan_simulator.launch.py
ros2_src/laser_scan_simulator/map/: map.xcf
ros2_src/obstacle_monitor/: package.xml  setup.cfg  setup.py
ros2_src/obstacle_monitor/launch/: obstacle_monitor.launch.py
ros2_src/obstacle_monitor/obstacle_monitor/: __init__.py  obstacle_monitor_node.py
ros2_src/robot_simulator/: README.md  package.xml  setup.py
ros2_src/robot_simulator/docs/: robot_simulator詳細設計書.md
ros2_src/robot_simulator/launch/: robot_simulator.launch.py
ros2_src/robot_simulator/robot_simulator/: __init__.py  robot_simulator.py
ros2_src/route_follower/: README.md  package.xml  setup.cfg  setup.py
ros2_src/route_follower/docs/: route_follower_phase2_検討記録_完全版.md  route_follower_詳細設計書_phase1.md  route_follower_詳細設計書_phase2_完全版.md
ros2_src/route_follower/launch/: route_follower.launch.py
ros2_src/route_follower/route_follower/: follower_core.py  route_follower.py  route_follower_node.py
ros2_src/route_manager/: README.md  package.xml  setup.cfg  setup.py
ros2_src/route_manager/docs/: route_manager_phase2_検討記録.md  route_manager_詳細設計書_phase2.md  route_manager詳細設計書_phase1.md
ros2_src/route_manager/launch/: route_manager.launch.py
ros2_src/route_manager/route_manager/: manager_core.py  manager_fsm.py  route_manager.py  route_manager_node.py
ros2_src/route_msgs/: CMakeLists.txt  package.xml
ros2_src/route_msgs/msg/: FollowerState.msg  ManagerStatus.msg  MissionInfo.msg  ObstacleAvoidanceHint.msg  Route.msg  RouteState.msg  Waypoint.msg
ros2_src/route_msgs/srv/: GetRoute.srv  ReportStuck.srv  UpdateRoute.srv
ros2_src/route_planner/: README.md  package.xml  setup.cfg  setup.py
ros2_src/route_planner/docs/: route_planner_詳細設計書_phase1.md
ros2_src/route_planner/launch/: route_planner.launch.py
ros2_src/route_planner/route_planner/: graph_solver.py  route_planner.py
ros2_src/route_planner/routes/: config.yaml
ros2_src/route_planner/routes/fixed/: f1.csv  f2.csv  straight.csv  waypoint.csv
ros2_src/route_planner/routes/variable/: edges.csv  nodes.csv
ros2_src/route_planner/routes/variable/segments/: edge_C100_C1.csv  edge_C100_C11.csv  edge_C100_C4.csv  edge_C100_C7.csv  edge_C101_C5.csv  edge_C101_C9.csv  edge_C102_C1.csv  edge_C102_C11.csv  edge_C102_C4.csv  edge_C102_C7.csv  edge_C10_C16.csv  edge_C10_C18.csv  edge_C11_C100.csv  edge_C11_C102.csv  edge_C11_C12.csv  edge_C12_C13.csv  edge_C12_C20.csv  edge_C13_C14.csv  edge_C14_C15.csv  edge_C14_C21.csv  edge_C15_C21.csv  edge_C16_C17.csv  edge_C17_C18.csv  edge_C18_C19.csv  edge_C1_C100.csv  edge_C1_C102.csv  edge_C1_C2.csv  edge_C1_C4.csv  edge_C20_C21.csv  edge_C2_C3.csv  edge_C2_C5.csv  edge_C3_C6.csv  edge_C4_C100.csv  edge_C4_C102.csv  edge_C4_C5.csv  edge_C4_C7.csv  edge_C5_C101.csv  edge_C5_C6.csv  edge_C6_C10.csv  edge_C7_C100.csv  (+7 more)
