<?xml version="1.0"?>
<package format="3">
  <name>tc2025_ros2</name>
  <version>0.1.0</version>
  <description>Core ROS 2 package for the TC2025 project.</description>

  <maintainer email="nakaba_tokutoku@hotmail.com">Tatsuhiko Nakabayashi</maintainer>
  <author email="nakaba_tokutoku@hotmail.com">Tatsuhiko Nakabayashi</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
