<?xml version="1.0"?>
<package format="3">
  <name>laser_scan_simulator</name>
  <version>0.1.0</version>
  <description>2D LiDAR scan simulator for obstacle_monitor testing.</description>
  <maintainer email="kaz.ogata1988@gmail.com">Kazuki Ogata</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
