<?xml version="1.0"?>
<package format="3">
  <name>obstacle_monitor</name>
  <version>0.2.0</version>
  <description>Obstacle monitor node for 2D LiDAR (Phase2).</description>
  <maintainer email="kaz.ogata1988@gmail.com">Kazuki Ogata</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>route_msgs</depend>

  <!-- Python deps for Foxy -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
