<?xml version="1.0"?>
<package format="3">
  <name>robot_simulator</name>
  <version>0.1.0</version>
  <description>robot_simulator ノードを提供する ROS2 パッケージ</description>
  <maintainer email="kaz.ogata1988@gmail.com">Kazuki Ogata</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
