<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>route_planner</name>
  <version>0.1.0</version>
  <description>経路生成と再計画サービスを提供する Python 実装の route_planner ノード</description>
  <maintainer email="kaz.ogata1988@gmail.com">Kazuki Ogata</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>route_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-japanize-matplotlib</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
